--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-horizontal-scrolling-menu": "^7.1.1",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "react-virtualized": "^9.22.5",
     "react-window": "^1.8.10",
     "web-vitals": "^2.1.4"
   },
